# BikeEconProject

./: README.md  SCRATCH.md  extract_bike_data.py  get_cid_funcs.R  pyproject.toml
data/: Boroughs.txt  CyclingTimes.csv  Pollutants.csv  Pollutants_updated.csv  Walking-Cycling.csv  bike-rides.csv  bike-rides_updated.csv  bike-stations.csv  bike-stations_updated.csv  borough_cache.pkl  borough_stations.pkl  casualities_2016.csv  casualities_2017.csv  casualities_2018.csv  casualities_2019.csv  london-borough-profiles-2016 Data set.csv  summary.csv  walking-cycling-borough.xlsx  ~$walking-cycling-borough.xlsx
src/bikeecon/: __init__.py  utils.py
src/bikeecon/analysis/: create_dataset.py  ols.py
src/bikeecon/trends/: air_quality.py  casualities.py  cycling_freqs.py  stations_hires.py
