[project]
name = "bikeecon"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kage08", email = "harshavardhan864.hk@gmail.com" }
]
dependencies = [
    "jupyter>=1.0.0",
    "pandas>=2.2.2",
    "statsmodels>=0.14.2",
    "scikit-learn>=1.4.2",
    "matplotlib>=3.8.4",
    "geopy>=2.4.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bikeecon"]
